--- a/STM.GDA.Web/STM.GDA.Web.csproj
+++ b/STM.GDA.Web/STM.GDA.Web.csproj
@@ -147,10 +147,12 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="BL\ClientBL.cs" />
     <Compile Include="BL\ComposantBL.cs" />
+    <Compile Include="BL\ResponsableBL.cs" />
     <Compile Include="BL\TypeBL.cs" />
     <Compile Include="Configuration\Constantes.cs" />
     <Compile Include="Controllers\BaseController.cs" />
     <Compile Include="Controllers\ComposantController.cs" />
+    <Compile Include="Extensions\ResponsableExtensions.cs" />
     <Compile Include="Extensions\ComposantExtensions.cs" />
     <Compile Include="Extensions\ClientExtentions.cs" />
     <Compile Include="Extensions\ComposantTypeExtensions.cs" />
