Ajustement de la validation lors de la soumission du formulaire. Création de la page de création. Il reste les sections technologies et environnements à faire.

--- a/STM.GDA.Web/STM.GDA.Web.csproj
+++ b/STM.GDA.Web/STM.GDA.Web.csproj
@@ -178,6 +178,7 @@
     <Content Include="Content\chosen.min.css" />
     <Content Include="Content\Composant.css" />
     <Content Include="Content\ComposantDetails.css" />
+    <Content Include="Content\ComposantCreer.css" />
     <Content Include="Content\ComposantModifier.css" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
@@ -233,6 +234,7 @@
     <Content Include="Views\Composant\Details.cshtml" />
     <Content Include="Views\Composant\_DetailsDependances.cshtml" />
     <Content Include="Views\Composant\Modifier.cshtml" />
+    <Content Include="Views\Composant\Creer.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
