Début de la section technologies dans la page modification (cette même section pourra être utilisée pour le formulaire de création). Le front-end est fait, il est possible d'ajouter des technologies à la liste. Il est aussi possible d'ajouter de nouvelles technologies comme pour les clients et les responsables. Les technologies dans la liste sont correctement postées, mais il reste à faire le code dans le back-end pour faire les modification dans la BD (ce sera le même fonctionnement qu'avec les clients et responsables). Je n'ai pas fait le petit bouton de suppression d'une technologie dans la liste, parce que je voulais en rediscuter. Donc, pour le moment, il faut double click la technologie pour la retirer de la liste.

--- a/STM.GDA.Web/STM.GDA.Web.csproj
+++ b/STM.GDA.Web/STM.GDA.Web.csproj
@@ -148,13 +148,15 @@
     <Compile Include="BL\ClientBL.cs" />
     <Compile Include="BL\ComposantBL.cs" />
     <Compile Include="BL\ResponsableBL.cs" />
+    <Compile Include="BL\TechnologieBL.cs" />
     <Compile Include="BL\TypeBL.cs" />
     <Compile Include="Configuration\Constantes.cs" />
     <Compile Include="Controllers\BaseController.cs" />
     <Compile Include="Controllers\ComposantController.cs" />
+    <Compile Include="Extensions\TechnologieExtensions.cs" />
     <Compile Include="Extensions\ResponsableExtensions.cs" />
     <Compile Include="Extensions\ComposantExtensions.cs" />
-    <Compile Include="Extensions\ClientExtentions.cs" />
+    <Compile Include="Extensions\ClientExtensions.cs" />
     <Compile Include="Extensions\ComposantTypeExtensions.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
