Création d'une vue partielle pour la section technologies. Ajout de la section technologie dans le formulaire de création. Fix d'un bug avec le trigger avec les technologies, clients et responsables.

--- a/STM.GDA.Web/STM.GDA.Web.csproj
+++ b/STM.GDA.Web/STM.GDA.Web.csproj
@@ -240,6 +240,7 @@
     <Content Include="Views\Composant\Modifier.cshtml" />
     <Content Include="Views\Composant\Creer.cshtml" />
     <Content Include="Views\Composant\_ModifierDependances.cshtml" />
+    <Content Include="Views\Composant\_ModifierTechnologies.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
