--- a/STM.GDA.Web/packages.config
+++ b/STM.GDA.Web/packages.config
@@ -2,7 +2,6 @@
 <packages>
   <package id="Antlr" version="3.5.0.2" targetFramework="net461" />
   <package id="bootstrap" version="3.3.7" targetFramework="net461" />
-  <package id="Harvest.Chosen" version="1.4.2" targetFramework="net461" />
   <package id="jQuery" version="3.2.1" targetFramework="net461" />
   <package id="jQuery.Validation" version="1.16.0" targetFramework="net461" />
   <package id="Microsoft.ApplicationInsights" version="2.4.0" targetFramework="net461" />
@@ -26,6 +25,7 @@
   <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net461" />
   <package id="PrototypeJS" version="1.7.1" targetFramework="net461" />
   <package id="Respond" version="1.4.2" targetFramework="net461" />
+  <package id="selectize" version="0.12.1" targetFramework="net461" />
   <package id="System.Diagnostics.DiagnosticSource" version="4.4.0" targetFramework="net461" />
   <package id="System.ValueTuple" version="4.4.0" targetFramework="net461" />
   <package id="WebGrease" version="1.6.0" targetFramework="net461" />
