--- a/STM.GDA.Web/STM.GDA.Web.csproj
+++ b/STM.GDA.Web/STM.GDA.Web.csproj
@@ -274,6 +274,7 @@
     <Content Include="Views\Deploiement\Index.cshtml" />
     <Content Include="Views\Deploiement\Details.cshtml" />
     <Content Include="Views\Deploiement\Creer.cshtml" />
+    <Content Include="Views\Deploiement\Modifier.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
