--- a/STM.GDA.Web/STM.GDA.Web.csproj
+++ b/STM.GDA.Web/STM.GDA.Web.csproj
@@ -275,6 +275,7 @@
     <Content Include="Views\Deploiement\Details.cshtml" />
     <Content Include="Views\Deploiement\Creer.cshtml" />
     <Content Include="Views\Deploiement\Modifier.cshtml" />
+    <Content Include="Views\Shared\_Pagination.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
