Début de la génération du texte descriptif d'un déploiement. Lors d'un clic sur le bouton, le fichier est généré et téléchargé. La prochaine étape est d'écrire dans le fichier.

--- a/STM.GDA.Web/STM.GDA.Web.csproj
+++ b/STM.GDA.Web/STM.GDA.Web.csproj
@@ -163,6 +163,7 @@
     <Compile Include="Controllers\BaseController.cs" />
     <Compile Include="Controllers\ComposantController.cs" />
     <Compile Include="Controllers\DeploiementController.cs" />
+    <Compile Include="CustomFilters\DeleteFileAttribute.cs" />
     <Compile Include="Extensions\DependanceExtension.cs" />
     <Compile Include="Extensions\DeploiementExtensions.cs" />
     <Compile Include="Extensions\EnvironnementExtensions.cs" />
