--- a/STM.GDA.Web/STM.GDA.Web.csproj
+++ b/STM.GDA.Web/STM.GDA.Web.csproj
@@ -183,7 +183,8 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="Models\CSVComposantListeModel.cs" />
+    <Compile Include="Models\CSVComposantListeModelCourt.cs" />
+    <Compile Include="Models\CSVComposantListeModelLong.cs" />
     <Compile Include="Models\ComposantBase.cs" />
     <Compile Include="Models\DeploiementListeModel.cs" />
     <Compile Include="Models\ComposantListeModel.cs" />
