--- a/STM.GDA.Web/packages.config
+++ b/STM.GDA.Web/packages.config
@@ -25,6 +25,7 @@
   <package id="Modernizr" version="2.8.3" targetFramework="net461" />
   <package id="morelinq" version="2.10.0" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net461" />
+  <package id="NUnit" version="3.9.0" targetFramework="net461" />
   <package id="PrototypeJS" version="1.7.1" targetFramework="net461" />
   <package id="Respond" version="1.4.2" targetFramework="net461" />
   <package id="selectize" version="0.12.1" targetFramework="net461" />
